<resources>
    <string name="app_name">UNITAR Cafe</string>
    <string name="slogan">Order your food and collect it once it\'s ready! It\'s that EASY!!</string>
    <string name="vendor_slogan">Vendor\'s Sign-in</string>

    <!--MainActivity Button-->
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="vendorsignIn">Vendor Sign In</string>
    <string name="vendorsignUp">Vendor Sign Up</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="signInEmail">something1@email.com</string>
    <string name="signInPass">abcd1234</string>
    <string name="signUpSName">Hegaarooban Phoobalan</string>
    <string name="signUpSPhone">0123456789</string>
    <string name="signUpUser">user001</string>
    <string name="vendor_sign_in">Are you a vendor? Sign-in here.</string>
    <string name="customer_sign_in">Are you a customer? Sign-in here.</string>
    <string name="radioVendor">Vendor</string>
    <string name="radioUser">User</string>
    <string name="tabHome">HOME</string>
    <string name="tabOrders">Orders</string>
    <string name="tabFoods">FOODS</string>

</resources>
