<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User ID" />

        <EditText
            android:id="@+id/edit_UserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/signUpUser"
            android:inputType="text"
            android:maxLength="50"
            android:singleLine="true"
            android:text="@string/signUpUser"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email" />

        <EditText
            android:id="@+id/edit_UserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:singleLine="true"
            android:text="@string/signInEmail"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name" />

        <EditText
            android:id="@+id/edit_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="Name"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/signUpSName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone Number" />

        <EditText
            android:id="@+id/edit_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/signUpSPhone"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password" />

        <EditText
            android:id="@+id/edit_PasswordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@string/signInPass"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/common_google_signin_btn_text_dark"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="226dp"
        android:layout_height="69dp"
        android:layout_above="@id/btn_signUp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="472dp"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:textSize="30sp" />
</RelativeLayout>